about-me/fix font-size,span and gap

--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,10 +1,3 @@
-<<<<<<< HEAD
-
-=======
-body {
-    font-family: 'Poppins', sans-serif;
-}
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
 
 .about-me-container {
     padding: 0 20px;
@@ -14,25 +7,17 @@ body {
 
 h3 {
     font-weight: 500;
-    font-size: 32px;
+    font-size: 2rem;
     line-height: 125%;
     letter-spacing: 0.02em;
     text-transform: uppercase;
-<<<<<<< HEAD
     margin-bottom: 32px;
 }
 
 p {
 
-=======
-    padding-bottom: 32px;
-}
-
-p {
-    
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
     font-weight: 300;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 150%;
     letter-spacing: 0.03em;
 }
@@ -46,7 +31,6 @@ ul {
     gap: 12px;
 }
 
-<<<<<<< HEAD
 .about-me-list li {
     position: relative;
     display: flex;
@@ -77,29 +61,13 @@ ul {
     height: auto;
     border-radius: 16px;
     margin: 0 0 40px 0;
-=======
-ul li {
-    display: flex;
-    align-items: flex-start;
-    gap: 8px;
-    font-size: 16px;
-}
-
-.icon {
-    flex-shrink: 0;
-}
-
-.img-about-me {
-    padding-bottom: 40px;
-    border-radius: 16px;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
 }
 
 .about-me {
     display: flex;
     justify-content: start;
     align-items: center;
-    font-size: 52px;
+    font-size: 3.25rem;
     font-weight: bold;
     line-height: 123%;
     letter-spacing: 0.03em;
@@ -111,7 +79,6 @@ ul li {
 }
 
 .text-black {
-<<<<<<< HEAD
     color: #292929
 }
 
@@ -125,21 +92,6 @@ ul li {
 
 .bio-text-container {
     margin-bottom: 40px;
-=======
-    color: #292929;
-}
-
-.text-green {
-    color: #00B068;
-}
-
-.text-one {
-    padding-bottom: 24px;
-}
-
-.bio-text-container {
-    padding-bottom: 40px;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
 }
 
 .sec-edu {
@@ -150,33 +102,26 @@ ul li {
 
 @media screen and (min-width: 768px) {
     .about-me-container {
-<<<<<<< HEAD
         padding: 0px 32px;
         width: 768px;
         height: 100%;
         position: relative;
-=======
-        padding: 0 32px;
-        margin: auto;
-        width: 704px;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
     }
 
     .about-me {
-        font-size: 108px;
+        font-size: 6.75rem;
         line-height: 115%;
         letter-spacing: 0.02em;
     }
 
     h3 {
-        font-size: 36px;
+        font-size: 2.25rem;
         line-height: 133%;
         letter-spacing: 0.01em;
     }
 
     .bio-container {
         display: flex;
-<<<<<<< HEAD
         
     
     }
@@ -211,45 +156,20 @@ ul li {
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
-=======
-        flex-wrap: wrap;
-    }
-
-    
-    .bio-text-container {
-        width: 336px;
-        height: 680px;
-        padding: 0;
-    }
-
-    .img-about-me {
-        width: 336px;
-        height: 392px;
-        border-radius: 16px;
-        padding: 368px 32px 60px 0;
-    }
-
-    
-   .background-img {
-       width: 336px;
-       height: 252px;
-       background-image: url('../img/decorbg2.png');
-       background-size: cover;
-       background-position: center center;
-       background-repeat: no-repeat;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
     }
 
     .text-two {
         padding-bottom: 12px;
     }
-<<<<<<< HEAD
 
     .sec-edu {
         width: 336px;
         height: 280px;
-        margin: 0 32px 0 0;
         padding: 0
+    }
+
+    .sec-role{
+        padding-left: 32px;
     }
 
     
@@ -258,32 +178,18 @@ ul li {
         display: flex;
         width: 704px;
         height: 280px;
-=======
-    .sec-edu{
-        width: 336px;
-        height: 280px;
-        padding: 0 32px 0 0;
-    }
-    .sec-role {
-        width: 336px;
-        height: 280px;
     }
 
-    .bio-list{
-       display: flex;
-       width: 704px ;
-       height: 280px ;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
+    ul{
+        gap: 16px;
     }
 }
 
 /* Desktop screen 1280px */
-<<<<<<< HEAD
 @media screen and (min-width: 1280px) {
     .about-me-container {
-        padding: 0px 32px;
-        width: 1280px;
-        height: 1244px;
+        min-width: 1280px;
+        /* height: 1244px; */
         margin: auto;
         
     }
@@ -301,30 +207,11 @@ ul li {
         height: 488px;
         margin: 0;
         
-=======
-@media screen and (min-width: 1280px){
-    .about-me-container {
-        padding: 0 32px;
-        margin: auto;
-        width: 1216px;
-    }
-    .img-about-me {
-        width: 384px;
-        height: 448px;
-        padding: 232px 136px 80px 208px;
-    }
-    
-    .bio-text-container {
-        width: 488px;
-        height: 488px;
-        padding: 0;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
     }
 
     .text-two {
         padding-bottom: 40px;
     }
-<<<<<<< HEAD
 
     .background-img {
         top: 692px;
@@ -334,49 +221,25 @@ ul li {
         width: 384px;
         height: 288px;
        
-=======
-    
-    .background-img{
-        width: 384px;
-        height: 288px;
-        margin-left: 104px;
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
     }
 
     .bio-list {
         padding-left: 208px;
-        width: 904px;
-        height: 280px;
+        min-width: 904px;
     }
 
     .sec-edu {
-<<<<<<< HEAD
          width: 384px;
-         margin: 0 136px 0 0;
+         
+        
+    }
+
+    .sec-role {
+        width: 384px;
+        height: 184px;
+        padding-left:  136px ;
         
     }
 
     
 }
-=======
-        width: 384px;
-        height: 280px;
-        padding: 0 136px 0 0;
-    }
-
-    .sec-role {
-        width: 384px;
-        height: 280px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
->>>>>>> baaa1219f70bf114c5ee242f8816898e7cab0004
